# STDISCM-Problem-Set-4

./: CMakeLists.txt  Dockerfile  README.md
Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Server/: CMakeLists.txt  main_server.cpp
protos/: ocr.proto
